[gd_scene load_steps=32 format=2]

[ext_resource path="res://Characters/CustomerTemplate.gd" type="Script" id=1]
[ext_resource path="res://Art Assets/Customers.png" type="Texture" id=2]
[ext_resource path="res://Art Assets/CharacterShadow.png" type="Texture" id=3]
[ext_resource path="res://Art Assets/EKey.png" type="Texture" id=4]

[sub_resource type="CapsuleShape2D" id=80]
radius = 7.99999
height = 8.00002

[sub_resource type="Animation" id=81]
resource_name = "DownLeft"
length = 0.8
loop = true
tracks/0/type = "value"
tracks/0/path = NodePath(".:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.1, 0.2, 0.3, 0.4, 0.5, 0.6, 0.7 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1, 1, 1, 1 ),
"update": 1,
"values": [ 19, 20, 21, 22, 23, 24, 25, 26 ]
}
tracks/1/type = "value"
tracks/1/path = NodePath(".:flip_h")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ false ]
}

[sub_resource type="Animation" id=82]
resource_name = "DownRight"
length = 0.8
loop = true
tracks/0/type = "value"
tracks/0/path = NodePath(".:flip_h")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ true ]
}
tracks/1/type = "value"
tracks/1/path = NodePath(".:frame")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0, 0.1, 0.2, 0.3, 0.4, 0.5, 0.6, 0.7 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1, 1, 1, 1 ),
"update": 1,
"values": [ 19, 20, 21, 22, 23, 24, 25, 26 ]
}

[sub_resource type="Animation" id=83]
resource_name = "IdleDownLeft"
length = 0.1
loop = true
tracks/0/type = "value"
tracks/0/path = NodePath(".:flip_h")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ false ]
}
tracks/1/type = "value"
tracks/1/path = NodePath(".:frame")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ 18 ]
}

[sub_resource type="Animation" id=84]
resource_name = "IdleDownRight"
length = 0.1
loop = true
tracks/0/type = "value"
tracks/0/path = NodePath(".:flip_h")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ true ]
}
tracks/1/type = "value"
tracks/1/path = NodePath(".:frame")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ 18 ]
}

[sub_resource type="Animation" id=85]
resource_name = "IdleUpLeft"
length = 0.1
loop = true
tracks/0/type = "value"
tracks/0/path = NodePath(".:flip_h")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ false ]
}
tracks/1/type = "value"
tracks/1/path = NodePath(".:frame")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ 27 ]
}

[sub_resource type="Animation" id=86]
resource_name = "IdleUpRight"
length = 0.1
loop = true
tracks/0/type = "value"
tracks/0/path = NodePath(".:flip_h")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ true ]
}
tracks/1/type = "value"
tracks/1/path = NodePath(".:frame")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ 27 ]
}

[sub_resource type="Animation" id=88]
resource_name = "UpLeft"
length = 0.8
loop = true
tracks/0/type = "value"
tracks/0/path = NodePath(".:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.1, 0.2, 0.3, 0.4, 0.5, 0.6, 0.7 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1, 1, 1, 1 ),
"update": 1,
"values": [ 28, 29, 30, 31, 32, 33, 34, 35 ]
}
tracks/1/type = "value"
tracks/1/path = NodePath(".:flip_h")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ false ]
}

[sub_resource type="Animation" id=89]
resource_name = "UpRight"
length = 0.8
loop = true
tracks/0/type = "value"
tracks/0/path = NodePath(".:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.1, 0.2, 0.3, 0.4, 0.5, 0.6, 0.7 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1, 1, 1, 1 ),
"update": 1,
"values": [ 28, 29, 30, 31, 32, 33, 34, 35 ]
}
tracks/1/type = "value"
tracks/1/path = NodePath(".:flip_h")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ true ]
}

[sub_resource type="AnimationNodeAnimation" id=64]
animation = "IdleUpLeft"

[sub_resource type="AnimationNodeAnimation" id=65]
animation = "IdleDownRight"

[sub_resource type="AnimationNodeAnimation" id=66]
animation = "IdleUpRight"

[sub_resource type="AnimationNodeAnimation" id=67]
animation = "IdleDownLeft"

[sub_resource type="AnimationNodeBlendSpace2D" id=15]
blend_point_0/node = SubResource( 64 )
blend_point_0/pos = Vector2( -1, -1.1 )
blend_point_1/node = SubResource( 65 )
blend_point_1/pos = Vector2( 1.1, 1 )
blend_point_2/node = SubResource( 66 )
blend_point_2/pos = Vector2( 1.1, -1.1 )
blend_point_3/node = SubResource( 67 )
blend_point_3/pos = Vector2( -1, 1 )
min_space = Vector2( -1, -1.1 )
max_space = Vector2( 1.1, 1 )
blend_mode = 1

[sub_resource type="AnimationNodeAnimation" id=72]
animation = "DownLeft"

[sub_resource type="AnimationNodeAnimation" id=73]
animation = "DownRight"

[sub_resource type="AnimationNodeAnimation" id=74]
animation = "UpRight"

[sub_resource type="AnimationNodeAnimation" id=75]
animation = "UpLeft"

[sub_resource type="AnimationNodeBlendSpace2D" id=16]
auto_triangles = false
blend_point_0/node = SubResource( 72 )
blend_point_0/pos = Vector2( -1, 1.1 )
blend_point_1/node = SubResource( 73 )
blend_point_1/pos = Vector2( 1.1, 1.1 )
blend_point_2/node = SubResource( 74 )
blend_point_2/pos = Vector2( 1.1, -1.1 )
blend_point_3/node = SubResource( 75 )
blend_point_3/pos = Vector2( -1, -1.1 )
triangles = PoolIntArray( 0, 1, 3, 1, 2, 3 )
min_space = Vector2( -1, -1.1 )
max_space = Vector2( 1.1, 1 )
blend_mode = 1

[sub_resource type="AnimationNodeStateMachineTransition" id=17]

[sub_resource type="AnimationNodeStateMachineTransition" id=18]

[sub_resource type="AnimationNodeStateMachine" id=90]
states/Idle/node = SubResource( 15 )
states/Idle/position = Vector2( 462, 197 )
states/Walking/node = SubResource( 16 )
states/Walking/position = Vector2( 683, 213 )
transitions = [ "Idle", "Walking", SubResource( 17 ), "Walking", "Idle", SubResource( 18 ) ]
start_node = "Idle"

[sub_resource type="AnimationNodeStateMachinePlayback" id=91]

[sub_resource type="CircleShape2D" id=92]
radius = 86.1626

[sub_resource type="CapsuleShape2D" id=93]
radius = 16.989
height = 52.0

[sub_resource type="Animation" id=94]
resource_name = "KeyPress"
loop = true
tracks/0/type = "value"
tracks/0/path = NodePath("KeyPressSprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.5 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 1,
"values": [ 1, 3 ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("KeyPressSprite:visible")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ true ]
}

[sub_resource type="Animation" id=95]
length = 0.001
tracks/0/type = "value"
tracks/0/path = NodePath("KeyPressSprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ 0 ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("KeyPressSprite:visible")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ true ]
}

[node name="CustomerTemplate" type="KinematicBody2D" groups=["Customer"]]
collision_layer = 4
collision_mask = 2
script = ExtResource( 1 )

[node name="Shadow" type="Sprite" parent="."]
position = Vector2( 1, 6 )
texture = ExtResource( 3 )

[node name="Sprite" type="Sprite" parent="."]
position = Vector2( 1, -23 )
texture = ExtResource( 2 )
flip_h = true
hframes = 18
vframes = 5
frame = 18

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2( 1, 2 )
rotation = 1.5708
shape = SubResource( 80 )

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
root_node = NodePath("../Sprite")
method_call_mode = 1
anims/DownLeft = SubResource( 81 )
anims/DownRight = SubResource( 82 )
anims/IdleDownLeft = SubResource( 83 )
anims/IdleDownRight = SubResource( 84 )
anims/IdleUpLeft = SubResource( 85 )
anims/IdleUpRight = SubResource( 86 )
anims/UpLeft = SubResource( 88 )
anims/UpRight = SubResource( 89 )

[node name="AnimationTree" type="AnimationTree" parent="."]
tree_root = SubResource( 90 )
anim_player = NodePath("../AnimationPlayer")
active = true
parameters/playback = SubResource( 91 )
parameters/Idle/blend_position = Vector2( 0.35694, 0.0767241 )
parameters/Walking/blend_position = Vector2( -0.00237232, 0.297244 )

[node name="TexalogPosition" type="Position2D" parent="."]
position = Vector2( 0, -53 )

[node name="WaitingTimer" type="Timer" parent="."]
one_shot = true

[node name="Area2D" type="Area2D" parent="."]
collision_layer = 4
collision_mask = 2

[node name="CollisionShape2D" type="CollisionShape2D" parent="Area2D"]
shape = SubResource( 92 )

[node name="TextTimer" type="Timer" parent="."]
wait_time = 5.0
one_shot = true

[node name="TalkingZone" type="Area2D" parent="."]
collision_layer = 4
collision_mask = 2

[node name="CollisionShape2D" type="CollisionShape2D" parent="TalkingZone"]
position = Vector2( 26, -16 )
rotation = 0.897099
shape = SubResource( 93 )

[node name="ResponseTimer" type="Timer" parent="."]
wait_time = 2.5
one_shot = true

[node name="KeyPressSprite" type="Sprite" parent="."]
position = Vector2( 0, -62 )
texture = ExtResource( 4 )
hframes = 4

[node name="KeyPressAnimator" type="AnimationPlayer" parent="."]
anims/KeyPress = SubResource( 94 )
anims/RESET = SubResource( 95 )

[connection signal="timeout" from="WaitingTimer" to="." method="_on_WaitingTimer_timeout"]
[connection signal="body_entered" from="Area2D" to="." method="_on_Area2D_body_entered"]
[connection signal="body_exited" from="Area2D" to="." method="_on_Area2D_body_exited"]
[connection signal="timeout" from="TextTimer" to="." method="_on_TextTimer_timeout"]
[connection signal="body_entered" from="TalkingZone" to="." method="_on_TalkingZone_body_entered"]
[connection signal="body_exited" from="TalkingZone" to="." method="_on_TalkingZone_body_exited"]
[connection signal="timeout" from="ResponseTimer" to="." method="_on_ResponseTimer_timeout"]
